--- a/hof.html
+++ b/hof.html
@@ -21,16 +21,14 @@
 
 	<div class="hof">
 		<ul>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
-			<li><img src="kmc.jpg"> <span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="bl.jpg"><span class="cap">Disha Janardhan <br> 2016-2017 </span> </li>
+			<li><img src="bl.jpg"><span class="cap">Disha Janardhan <br> 2016-2017 </span>  </li>
+			<li><img src="bl.jpg"> <span class="cap">Disha Janardhan <br> 2016-2017 </span> </li>
 		</ul>
 		<ul>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
-			<li><img src="kmc.jpg"> <span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="bl.jpg"><span class="cap">Disha Janardhan <br> 2016-2017 </span> </li>
+			<li><img src="bl.jpg"><span class="cap">Disha Janardhan <br> 2016-2017 </span>  </li>
+			<li><img src="bl.jpg"> <span class="cap">Disha Janardhan <br> 2016-2017 </span> </li>
 		</ul>
 	</div>
 
