--- a/org.html
+++ b/org.html
@@ -21,16 +21,14 @@
 
 	<div class="org">
 		<ul>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
-			<li><img src="kmc.jpg"> <span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="Hostel1.jpg"><span class="cap">Disha Janardhan</span> </li>
+			<li><img src="Hostel1.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="Hostel1.jpg"> <span class="cap">Disha Janardhan</span> </li>
 		</ul>
 		<ul>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
-			<li><img src="kmc.jpg"> <span class="cap">Disha Janardhan</span> </li>
-			<li><img src="kmc.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="Hostel1.jpg"><span class="cap">Disha Janardhan</span> </li>
+			<li><img src="Hostel1.jpg"><span class="cap">Disha Janardhan</span>  </li>
+			<li><img src="Hostel1.jpg"> <span class="cap">Disha Janardhan</span> </li>
 		</ul>
 	</div>
 
